# FrameGen

./: .CMakeLists.txt.swp  CMakeLists.txt  FrameGen  FrameGen.cpp  FrameGen.h  FrameGen.hpp  README.md  main.cpp  makefile  test.txt
FrameGen/: CMakeLists.txt  FrameGen.cpp  FrameGen.hpp  main.cpp
docs/: Frame_out_of_WIB_format_1_0.ods  README.md
exampleframes/: myfirstframe0.frame  thousand.frame
exampleframes/lotsoffiles/: hundred0.frame  hundred1.frame  hundred10.frame  hundred11.frame  hundred12.frame  hundred13.frame  hundred14.frame  hundred15.frame  hundred16.frame  hundred17.frame  hundred18.frame  hundred19.frame  hundred2.frame  hundred20.frame  hundred21.frame  hundred22.frame  hundred23.frame  hundred24.frame  hundred25.frame  hundred26.frame  hundred27.frame  hundred28.frame  hundred29.frame  hundred3.frame  hundred30.frame  hundred31.frame  hundred32.frame  hundred33.frame  hundred34.frame  hundred35.frame  hundred36.frame  hundred37.frame  hundred38.frame  hundred39.frame  hundred4.frame  hundred40.frame  hundred41.frame  hundred42.frame  hundred43.frame  hundred44.frame  (+60 more)
src/: FrameGen.cpp  FrameGen.hpp  framegen-test.cpp
tests/: compressionRange.sh
ups/: product_deps
zlib-1.2.11/: compress.lo  deflate.lo  example  examplesh  infback.lo  inflate.lo  minigzip  minigzipsh
